# shiplet

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  novella_task.json  pyproject.toml  run.sh  task.json
.github/workflows/: ci.yml
prompts/: code_writer.user.md
src/ai_dev_agent/: __init__.py  config.py  errors.py  models.py
src/ai_dev_agent/ai/: code_agent.py  context.py  openai_provider.py  prompts.py  provider.py
src/ai_dev_agent/git_provider/: base.py  github.py  pr_body.py
src/ai_dev_agent/graph/: pipeline.py  state.py
src/ai_dev_agent/input/: api.py  cli.py  parser.py
src/ai_dev_agent/observability/: logging.py  report.py
src/ai_dev_agent/prompts/: code_writer.system.md  task_parser.system.md
src/ai_dev_agent/repo/: analyzer.py  manager.py
src/ai_dev_agent/repo/profiles/: base.py  node.py  python.py
src/ai_dev_agent/security/: sanitize.py  secrets.py
src/ai_dev_agent/templates/: pr_body.md
src/ai_dev_agent/test_runner/: docker_runner.py  runner.py
tests/: test_analyzer.py  test_api.py  test_cli.py  test_code_agent.py  test_config.py  test_context.py  test_docker_runner.py  test_errors.py  test_git_provider.py  test_logging.py  test_manager.py  test_models.py  test_openai_provider.py  test_parser.py  test_pipeline.py  test_report.py  test_runner.py  test_sanitize.py  test_secrets.py
