[project]
name = "ai-dev-agent"
version = "0.1.0"
description = "AI Development Agent that turns a task into a Pull Request."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "typer>=0.12",
    "openai>=1.40",
    "PyGithub>=2.3",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.8",
    "httpx>=0.27",
]

[project.scripts]
agent = "ai_dev_agent.input.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_dev_agent"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["langgraph.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
python_classes = ["*Tests", "*TestCase"]
filterwarnings = ["ignore:Using `httpx` with `starlette.testclient`"]
